--- a/styles/experiences.css
+++ b/styles/experiences.css
@@ -11,6 +11,7 @@
     width: 100%;
     position: relative;
     top: 2px;
+    color: var(--primary-color);
 }
 .wave-bottom{
     transform: scale(-1,-1);
