--- a/styles/profile.css
+++ b/styles/profile.css
@@ -74,7 +74,7 @@
         font-size: 3rem;
         font-weight: bold;
         margin: 0;
-        color: var(--primary-color);
+        color: var(--accent-color);
         font-family: 'Noto Sans', sans-serif;
         
     }
